--- a/assets/css/theme-indigo.css
+++ b/assets/css/theme-indigo.css
@@ -27,8 +27,8 @@
     
     /* --primary-color: #5900ff;
     --secondary-color: #8340ff; */
-    --primary-color: #eabe24;
-    --secondary-color: #e1c768;
+    --primary-color: #EC8308;
+    --secondary-color: #ffa742;
 
     /* --primary-color: #fca311;
     --secondary-color: #f5f5f5; */
